WIP: Editing vim-intro post

--- a/_posts/2017-10-29-vim-intro.md
+++ b/_posts/2017-10-29-vim-intro.md
@@ -47,7 +47,7 @@ También puedes abrir diferentes pestañas donde poder mantener los archivos abi
 Otra característica muy interesante que permite _vim_ es poder dividir la ventana con diferentes archivos.
 
 {% progressive_picture
-  thumbnail: /assets/vim-intro-3thumb.jpg
+  thumbnail: /assets/vim-intro-3.thumb.jpg
   src: /assets/vim-intro-3.jpg
   height: 1296
   width: 1920
@@ -59,5 +59,93 @@ Otra particularidad de vim es la amplia gama de _plugins_ y librerías adicional
 
 Como puedes ver, _vim_ es un editor que ofrece las mismas posibilidades sino más que otros. Su gran dificultad es su curva de aprendizaje pero si has llegado hasta aquí imagino que sigues teniendo cierto interés en aprender a manejarlo. Si es así entonces el siguiente paso es instalarlo y configurarlo.
 
+## Instalación y Configuración
+_Vim_ se puede instalar de varias maneras diferentes, al igual que cualquier otro programa. Para los usuarios de Windows lo más normal es descargar un archivo instalable y lanzarlo. Para el resto de sistemas basados en UNIX lo más sencillo es utilizar un gestor de paquetes e instalarlo desde ahí. Mac tampoco deja de ser un UNIX aunque no viene con un gestor instalado por defecto (bueno, existe el _App Store_ pero no vale). Para poder instalar las diferentes librerías de manera automática te recomiendo instalar uno. El más extendido hoy día es [_homebrew_][homebrew], echa un vistazo a su página y sigue los pasos para instalarlo.
+
+La otra opción es ir a la [_página oficial de descargas de vim_][vim-downloads] y bajarlo.
+
+Una vez lo hayas instalado abre una consola de comandos o terminal y teclea la siguiente orden.
+
+{% highlight shell %}
+$ vim
+{% endhighlight %}
+
+Este comando abrirá el programa mostrando la siguiente pantalla.
+
+{% progressive_picture
+  thumbnail: /assets/vim-intro-4.thumb.jpg
+  src: /assets/vim-intro-4.jpg
+  height:880 
+  width: 1452
+  alt: 'Pantalla de inicio de vim.' %}
+
+Como antes dije, el ratón no funciona aunque se puede activar. Además también habrás comprobado que no puedes escribir. Esto se debe a que vim por defecto arranca con el modo _normal_ activado. Más adelante veremos que es eso de los modos.
+
+Para poder escribir todo lo que tienes que hacer es pulsar la tecla <kbd>i</kbd>. A continuación puedes ver que el cursor ha cambiado y en la parte inferior de la pantalla pegado a la izquierda ha aparecido el texto {% ihighlight shell %}-- INSERT --{% endihighlight %}. Esto indica que ha cambiado de modo y ya puedes escribir como lo harías en un editor común.
+
+Para activar el ratón primero pulsa <kbd>esc</kbd> para regresar al modo normal. Sabrás que estás en el modo normal porque el texto insert inferior habrá desaparecido. Ahora pulsa la tecla <kbd>:</kbd>. Puedes observar que donde apareció el texto {% ihighlight shell %}-- INSERT --{% endihighlight %} muestra ahora dos puntos. Esto indica que puedes escribir los comandos que actuarán sobre el texto. Básicamente el modo _normal_ de _vim_ es cómo trabajar con el texto de un archivo como si fuera un terminal, lanzando acciones que modifican el texto.
+
+A continuación de estos dos puntos introduces el siguiente comando y pulsas <kbd>Enter</kbd>. Tras esto ya podrás usar el ratón.
+
+{% highlight shell %}
+:set mouse=a
+{% endhighlight %}
+
+El único problema es que cuando cierres _vim_ este parámetro no se mantendrá. Para que este cambio no se pierda y tengas que volver a declararlo debes editar un archivo con el nombre {% ihighlight shell %}.vimrc{% endihighlight %}. En ocasiones en Windows puede que este archivo sea nombrado como{% ihighlight shell %}_vimrc{% endihighlight %}.
+
+Una forma de averiguar este nombre es tecleando {% ihighlight shell %}:version{% endihighlight %}. Esto muestra la versión de _vim_, las _features_ incluidas y el nombre de archivo de configuración entre otras cosas. En la imagen inferior puedes ver el resultado de este comando.
+  
+{% progressive_picture
+  thumbnail: /assets/vim-intro-5.thumb.jpg
+  src: /assets/vim-intro-5.jpg
+  height: 1022
+  width: 1442
+  alt: 'Pantalla de inicio de vim.' %}
+
+Para hallar el nombre del archivo de configuración debes buscar el texto _user vimrc file_. Lo más común es que el texto a la derecha de los dos puntos sea {% ihighlight shell %}$HOME/.vimrc{% endihighlight %}. Si no fuese así al menos ya sabrías cómo nombrar archivo de configuración. 
+
+Lo normal es que no exista este archivo así que tendrás que crearlo. Si queremos que todos los cambios sean permanentes en cualquier ruta donde se ejecute vim este archivo se deberá instalar donde apunte la variable de sistema {% ihighlight shell %}$HOME{% endihighlight %}. Un aspecto interesante sobre la configuración de vim es que estas propiedades pueden ser sobreescritas si en el directorio donde se ejecuta el programa existe otro {% ihighlight shell %}.vimrc{% endihighlight %}. Por lo tanto prevalecen los parámetros en este último archivo de configuración.
+
+Dicho esto, desde de _vim_ teclea el siguiente comando.
+
+{% highlight shell %}
+:echo $HOME
+{% endhighlight %}
+
+El resultado del comando es la ruta donde guardar el archivo {% ihighlight shell %}.vimrc{% endihighlight %} o el nombre que especifique _vim_.
+
+A continuación edita ese archivo con la siguiente orden (siempre desde _vim_).
+
+{% highlight shell %}
+:e! $HOME/.vimrc
+{% endhighlight %}
+
+Si existe el archivo mostrará una serie de parámetros de configuración en cada nueva línea. En caso contrario estará vacío. Pulsa <kbd>o</kbd> para añadir un línea nueva justo debajo del cursor y cambiar al modo _insert_. Escribe el mismo comando que ejecutaste para habilitar el ratón ({% ihighlight shell %}set mouse=a{% endihighlight %}). Lo siguiente es guardar el archivo mediante la acción {% ihighlight shell %}:wq{% endihighlight %}. <kbd>w</kbd> sirve para guardar el documento y <kbd>q</kbd> para salir. Tras esto podrás usar el ratón en _vim_ como en entorno gráfico. 
+
+A partir de ahora cualquier cambio que desees aplicar de forma permanente en _vim_ deberás escribirlo en este archivo. [Aquí][full-vim-options] puedes ver la lista completa de opciones de configuración. Aunque si lo prefieres puedes usar este otro [enlace][selected-vim-options] mucho más sucinto y explicativo.
+
+## Los modos de _vim_
+Vim ofrece la posibilidad de trabajar con el texto de tres maneras diferentes: _normal_, _insert_ y _visual_.
+
+### _Normal_
+Este es el modo por defecto nada más abrir vim. Cómo podrás observar si lo tienes abierto no permite la edición del texto, al menos cómo lo harías en cualquier editor. Aunque no es cierto que no se pueda editar. Todos las acciones de edición son ejecutadas a través de un comando asociado a un botón del teclado. Por ejemplo, borrar un carácter se haría con la letra <kbd>x</kbd>.
+
+Muchas de estas acciones pueden ser usadas en combinación con comandos de movimiento y repetición. Un ejemplo sería al pulsar la tecla <kbd>3</kbd> le estaríamos indicando a _vim_ que ejecute la siguiente acción tres veces. Por lo tanto usado en combinación con <kbd>x</kbd> —<kbd>3</kbd><kbd>x</kbd>— se borrarán los tres siguientes caracteres hacia la derecha. 
+
+Otro ejemplo combinatorio sería <kbd>3</kbd><kbd>d</kbd><kbd>l</kbd>. En este caso tendrías el mismo resultado que en el ejemplo anterior. Al igual que <kbd>x</kbd>, <kbd>d</kbd> también se utiliza para borrar pero con la diferencia que espera un comando de movimiento/dirección.
+
+Los comandos de movimiento originales son <kbd>h</kbd><kbd>j</kbd><kbd>k</kbd><kbd>l</kbd>. Esto es así debido a que el creador de [_vi_][vi] (_vim_ es una versión mejorada de _vi_ como especifican sus siglas, Vi IMproved) lo hizo con [terminal ADM-3A][hjkl] a mediados de los 70 y desde entonces se ha mantenido.
+
+
+
+
+
+
 [nerdtree]: https://github.com/scrooloose/nerdtree
 [vimawesome]: https://vimawesome.com/
+[homebrew]: https://brew.sh/
+[vim-downloads]: http://www.vim.org/download.php
+[full-vim-options]: http://vimdoc.sourceforge.net/htmldoc/quickref.html#option-list
+[selected-vim-options]: https://dougblack.io/words/a-good-vimrc.html
+[vi]: https://es.wikipedia.org/wiki/Vi
+[hjkl]: http://www.catonmat.net/blog/why-vim-uses-hjkl-as-arrow-keys/
