Restyling applied and nigh mode added. New font Roboto. Edited vim-intro post

--- a/_posts/2017-11-03-vim-intro.md
+++ b/_posts/2017-11-03-vim-intro.md
@@ -12,15 +12,15 @@ permalink: /articulos/vim-intro
   alt: 'Logo de vim.'
   class: 'picture-shrink' %}
 
-_Entiendo que si has llegado hasta aquí es porque tienes cierto interés en saber vim y quieres aprender a manejarlo, o que ni tan siquiera sepas lo que es (aunque lo dudo) y hayas abierto este artículo por azar. Sea cual sea el caso, antes de empezar me gustaría que supieras que este artículo lo he enfocado para que puedas hacerte una idea generalizada sobre el editor. Por lo tanto no es esperes encontrar un tutorial al uso o una manual de referencia._
+Entiendo que si has llegado hasta aquí es porque tienes cierto interés en saber vim y quieres aprender a manejarlo, o que ni tan siquiera sepas lo que es (aunque lo dudo) y hayas abierto este artículo por azar. Sea cual sea el caso, antes de empezar me gustaría que supieras que este artículo lo he enfocado para que puedas hacerte una idea generalizada sobre el editor. Por lo tanto no es esperes encontrar un tutorial al uso o una manual de referencia.
 
-_En la primera parte se explican las características de vim y su diferencia con el resto de editores. En el apartado de instalación y configuración se introducen una serie de comandos útiles para que puedas al menos comenzar a trastear con vim sin que te frustres (créeme que si nadie te dice los 4 comandos básicos te puedes volver loco). Por último sabrás sobre los diferentes modos de edición._
+En la primera parte se explican las características de vim y su diferencia con el resto de editores. En el apartado de instalación y configuración se introducen una serie de comandos útiles para que puedas al menos comenzar a trastear con _vim_ sin que te frustres (créeme que si no conoces los cuatro comandos básicos te puedes volver loco). Por último verás cuales son los diferentes modos de edición.
 
-_Sería interesante que pudieras leer esto mientras tienes abierto un terminal donde ir probando vim._
+Sería interesante que pudieras leer esto mientras tienes abierto un terminal donde ir probando vim.
 
-_Si deseas saber más puedes usar como referencia los enlaces al final del artículo._
+Si deseas saber más puedes usar como referencia los enlaces al final del artículo.
 
-_¡Bien! Ahora que ya sabes de qué va esto, ponte cómodo y a leer._
+¡Bien! Ahora que ya sabes de qué va esto, ponte cómodo y a leer.
 
 ## Introducción
 Hay muchos editores de texto entre los que elegir. Muchos de ellos llevan mucho tiempo siendo usados y tienen el reconocimiento de la comunidad. Otros son más recientes pero están sido muy bien acogidos. Aunque al final las diferencias entre unos y otros dependen de dos factores: rendimiento y _features_ exclusivas. Aparte de estas dos características, la elección entre será totalmente subjetiva. De hecho, no importa el editor que escogas, la mayoría de las acciones estarán situadas en los mismos lugares. Lo cual facilita el cambio entre ellos. Posiblemente si esto no fuera así nadie cambiaría el editor con el que empezó.
@@ -113,7 +113,7 @@ Para hallar el nombre del archivo de configuración debes buscar el texto _user 
 
 Lo normal es que no exista este archivo así que tendrás que crearlo. Si queremos que todos los cambios sean permanentes en cualquier ruta donde se ejecute vim este archivo se deberá instalar donde apunte la variable de sistema {% ihighlight shell %}$HOME{% endihighlight %}. Un aspecto interesante sobre la configuración de vim es que estas propiedades pueden ser sobreescritas si en el directorio donde se ejecuta el programa existe otro {% ihighlight shell %}.vimrc{% endihighlight %}. Por lo tanto prevalecen los parámetros en este último archivo de configuración.
 
-Dicho esto, desde de _vim_ teclea el siguiente comando.
+Dicho esto, teclea desde de _vim_ el siguiente comando.
 
 {% highlight shell %}
 :echo $HOME
@@ -129,7 +129,9 @@ A continuación edita ese archivo con la siguiente orden (siempre desde _vim_).
 
 Si existe el archivo mostrará una serie de parámetros de configuración en cada nueva línea. En caso contrario estará vacío. Pulsa <kbd>o</kbd> para añadir un línea nueva justo debajo del cursor y cambiar al modo _insert_. Escribe el mismo comando que ejecutaste para habilitar el ratón ({% ihighlight shell %}set mouse=a{% endihighlight %}). Lo siguiente es guardar el archivo mediante la acción {% ihighlight shell %}:wq{% endihighlight %}. <kbd>w</kbd> sirve para guardar el documento y <kbd>q</kbd> para salir. Tras esto podrás usar el ratón en _vim_ como en entorno gráfico. 
 
-A partir de ahora cualquier cambio que desees aplicar de forma permanente en _vim_ deberás escribirlo en este archivo. [Aquí][full-vim-options] puedes ver la lista completa de opciones de configuración. Aunque si lo prefieres puedes usar este otro [enlace][selected-vim-options] mucho más sucinto y explicativo.
+A partir de ahora cualquier cambio que desees aplicar de forma permanente en _vim_ deberás escribirlo en este archivo. Por ejemplo podrás cambiar el esquema de colores, configurar el tabulador o el tipo de fuente, cambiar las acciones o instalar [_plugins_][vim-brief-plugin-list]. Aunque para esto último sería mejor optar por un gestor de plugins cómo [Vundle][vundle] o [vim-plug][vim-plug]. Hay un hilo interesante en [reddit][reddit-vim-plugin-manager-thread] donde poder saber que opción elegir.
+
+Por último [aquí][full-vim-options] puedes ver la lista completa de opciones de configuración. Aunque si lo prefieres puedes usar este otro [enlace][selected-vim-options] mucho más sucinto y explicativo.
 
 ## Los modos de _vim_
 Vim ofrece la posibilidad de trabajar con el texto de tres maneras diferentes: _normal_, _insert_ y _visual_.
@@ -255,3 +257,7 @@ Para finalizar y como buen punto de partida te recomiendo que hagas el tutorial 
 [vimtutor]: http://vimdoc.sourceforge.net/htmldoc/usr_01.html#01.3
 [vimdoc]: http://vimdoc.sourceforge.net/htmldoc/usr_toc.html
 [vim-cheatsheet-google]: https://www.google.es/search?q=vim+cheat+sheet&oq=vim+cheat+sheet&aqs=chrome.0.69i59j69i65j69i60l2j0l2.3214j0j4&sourceid=chrome&ie=UTF-8
+[vim-brief-plugin-list]: https://vim.zeef.com/andrew.krawchyk
+[vundle]: https://github.com/VundleVim/Vundle.vim
+[vim-plug]: https://github.com/junegunn/vim-plug 
+[reddit-vim-plugin-manager-thread]: https://www.reddit.com/r/vim/comments/4qo7ur/which_plugin_installer_or_vim_package_manager/ 
