--- a/_posts/2017-11-03-vim-intro.md
+++ b/_posts/2017-11-03-vim-intro.md
@@ -113,7 +113,7 @@ Para hallar el nombre del archivo de configuración debes buscar el texto _user 
 
 Lo normal es que no exista este archivo así que tendrás que crearlo. Si queremos que todos los cambios sean permanentes en cualquier ruta donde se ejecute vim este archivo se deberá instalar donde apunte la variable de sistema {% ihighlight shell %}$HOME{% endihighlight %}. Un aspecto interesante sobre la configuración de vim es que estas propiedades pueden ser sobreescritas si en el directorio donde se ejecuta el programa existe otro {% ihighlight shell %}.vimrc{% endihighlight %}. Por lo tanto prevalecen los parámetros en este último archivo de configuración.
 
-Dicho esto, teclea desde de _vim_ el siguiente comando.
+Dicho esto, teclea desde _vim_ el siguiente comando.
 
 {% highlight shell %}
 :echo $HOME
