Fixed proper descriptions for page.

--- a/_posts/2017-11-03-vim-intro.md
+++ b/_posts/2017-11-03-vim-intro.md
@@ -2,7 +2,7 @@
 title: "vim: introducción"
 date: 2017-11-03 00:30:00 +0100
 categories: [artículos, vim, tutorial]
-description: Breve tutorial sobre el manejo de vim y sus diferentes modos de edición.
+excerpt: Breve tutorial sobre el manejo de vim y sus diferentes modos de edición.
 permalink: /articulos/vim-intro
 ---
 {% progressive_picture
