Edition and fixed mistypes

--- a/_posts/2017-11-03-vim-intro.md
+++ b/_posts/2017-11-03-vim-intro.md
@@ -127,7 +127,9 @@ A continuación edita ese archivo con la siguiente orden (siempre desde _vim_).
 :e! $HOME/.vimrc
 {% endhighlight %}
 
-Si existe el archivo mostrará una serie de parámetros de configuración en cada nueva línea. En caso contrario estará vacío. Pulsa <kbd>o</kbd> para añadir un línea nueva justo debajo del cursor y cambiar al modo _insert_. Escribe el mismo comando que ejecutaste para habilitar el ratón ({% ihighlight shell %}set mouse=a{% endihighlight %}). Lo siguiente es guardar el archivo mediante la acción {% ihighlight shell %}:wq{% endihighlight %}. <kbd>w</kbd> sirve para guardar el documento y <kbd>q</kbd> para salir. Tras esto podrás usar el ratón en _vim_ como en entorno gráfico. 
+Si existe el archivo mostrará una serie de parámetros de configuración en cada nueva línea. En caso contrario estará vacío. Pulsa <kbd>o</kbd> para añadir un línea nueva justo debajo del cursor y cambiar al modo _insert_. Escribe el mismo comando que ejecutaste para habilitar el ratón ({% ihighlight shell %}set mouse=a{% endihighlight %}). Lo siguiente es guardar el archivo mediante la acción {% ihighlight shell %}:wq{% endihighlight %}. <kbd>w</kbd> sirve para guardar el documento y <kbd>q</kbd> para salir. Tras esto podrás usar el ratón en _vim_ como en entorno gráfico.
+
+Otra forma más rápida y sencilla sería ejecutar {% ihighlight shell %} :echo $MYVIMRC {% endihighlight %}. Esto muestra la ruta y el archivo donde se halla la confirguración de _vim_.
 
 A partir de ahora cualquier cambio que desees aplicar de forma permanente en _vim_ deberás escribirlo en este archivo. Por ejemplo podrás cambiar el esquema de colores, configurar el tabulador o el tipo de fuente, cambiar las acciones o instalar [_plugins_][vim-brief-plugin-list]. Aunque para esto último sería mejor optar por un gestor de plugins cómo [Vundle][vundle] o [vim-plug][vim-plug]. Hay un hilo interesante en [reddit][reddit-vim-plugin-manager-thread] donde poder saber que opción elegir.
 
@@ -236,6 +238,8 @@ Bromas aparte, si que es cierto que una vez habituado, la ejecución de los coma
 
 Para finalizar y como buen punto de partida te recomiendo que hagas el tutorial instalado conjuntamente con _vim_, _vimtutor_. Para saber más sobre éste tan solo debes teclear [{% ihighlight shell %}:help vimtutor{% endihighlight %}][vimtutor] desde _vim_. También puedes consultar toda la documentación oficial en el propio editor teclando {% ihighlight shell %}:help{% endihighlight %}. Aunque probablemente al principio te parezca más cómodo leer el mismo contenido en una [página web][vimdoc]. Otro recurso interesante es tener una chuleta al lado para poder consultar rápidamente que comando necesitas. Si buscas [_vim cheat sheet_ en google][vim-cheatsheet-google] encontrarás decenas de ellas.
 
+[_Vim Adventures_][vim-adventures] es otra opción interesate y divertida donde aprender vim jugando. Si prefieres algo más austero también puedes probar con otros tutoriales interactivos como [_openvim_][openvim] o [_vimgenius_][vimgenius].
+
 ## Fuentes 
 * [vim.org](http://www.vim.org/)
 * [vimdoc.sourceforge.net/htmldoc/usr_toc.html](http://vimdoc.sourceforge.net/htmldoc/usr_toc.html)
@@ -245,6 +249,8 @@ Para finalizar y como buen punto de partida te recomiendo que hagas el tutorial 
 * [vimawesome.com](https://vimawesome.com/)
 * [viemu.com/a_vi_vim_graphical_cheat_sheet_tutorial.html](http://www.viemu.com/a_vi_vim_graphical_cheat_sheet_tutorial.html)
 * [vim.rtorr.com](https://vim.rtorr.com/)
+* [labnol.org/internet/learning-vim-for-beginners/28820/](https://www.labnol.org/internet/learning-vim-for-beginners/28820/)
+* [vimcasts.org/](http://vimcasts.org/)
 
 [nerdtree]: https://github.com/scrooloose/nerdtree
 [vimawesome]: https://vimawesome.com/
@@ -261,3 +267,6 @@ Para finalizar y como buen punto de partida te recomiendo que hagas el tutorial 
 [vundle]: https://github.com/VundleVim/Vundle.vim
 [vim-plug]: https://github.com/junegunn/vim-plug 
 [reddit-vim-plugin-manager-thread]: https://www.reddit.com/r/vim/comments/4qo7ur/which_plugin_installer_or_vim_package_manager/ 
+[vim-adventures]: https://vim-adventures.com/
+[openvim]: http://www.openvim.com/
+[vimgenius]: http://vimgenius.com/
