Edited vim-intro article. Added two drafts.

--- a/_posts/2017-11-03-vim-intro.md
+++ b/_posts/2017-11-03-vim-intro.md
@@ -12,11 +12,11 @@ permalink: /articulos/vim-intro
   alt: 'Logo de vim.'
   class: 'picture-shrink' %}
 
-Entiendo que si has llegado hasta aquí es porque tienes cierto interés en saber vim y quieres aprender a manejarlo, o que ni tan siquiera sepas lo que es (aunque lo dudo) y hayas abierto este artículo por azar. Sea cual sea el caso, antes de empezar me gustaría que supieras que este artículo lo he enfocado para que puedas hacerte una idea generalizada sobre el editor. Por lo tanto no es esperes encontrar un tutorial al uso o una manual de referencia.
+Entiendo que si has llegado hasta aquí es porque tienes cierto interés en saber _vim_ y quieres aprender a manejarlo, o que ni tan siquiera sepas lo que es (aunque lo dudo) y hayas abierto este artículo por azar. Sea cual sea el caso, antes de empezar me gustaría que supieras que este artículo lo he enfocado para que puedas hacerte una idea generalizada sobre el editor. Por lo tanto no es esperes encontrar un tutorial al uso o una manual de referencia.
 
-En la primera parte se explican las características de vim y su diferencia con el resto de editores. En el apartado de instalación y configuración se introducen una serie de comandos útiles para que puedas al menos comenzar a trastear con _vim_ sin que te frustres (créeme que si no conoces los cuatro comandos básicos te puedes volver loco). Por último verás cuales son los diferentes modos de edición.
+En la primera parte se explican las características de _vim_ y su diferencia con el resto de editores. En el apartado de instalación y configuración se introducen una serie de comandos útiles para que puedas al menos comenzar a trastear con _vim_ sin que te frustres (créeme que si no conoces los cuatro comandos básicos te puedes volver loco). Por último verás cuales son los diferentes modos de edición.
 
-Sería interesante que pudieras leer esto mientras tienes abierto un terminal donde ir probando vim.
+Sería interesante que pudieras leer esto mientras tienes abierto un terminal donde ir probando _vim_.
 
 Si deseas saber más puedes usar como referencia los enlaces al final del artículo.
 
@@ -27,7 +27,7 @@ Hay muchos editores de texto entre los que elegir. Muchos de ellos llevan mucho 
 
 A diferencia de la mayoría de editores está _vim_. Básicamente este programa funciona sobre una consola de comandos (no corre sobre un entorno gráfico). Todas sus acciones se basan en comandos de teclado (ausencia de ratón). Y sus diferentes modos de edición (_normal_, _input_, _visual_) que más adelante verás. Solo estas tres características pueden ahuyentar al profano.
 
-La pregunta que te puedes estar haciendo es ¿por qué usar _vim_ si voy a tener que aprender desde cero para manejarlo? Pues bien, reconozco que al principio cuesta adaptarse a un editor como vim donde nada está donde uno espera. Es más, no hay nada que esté donde uno espera. Para que te hagas una idea de cuán distinto es puedes mirar la imagen a continuación. Observa que interfaz tan minimalista.
+La pregunta que te puedes estar haciendo es ¿por qué usar _vim_ si voy a tener que aprender desde cero para manejarlo? Pues bien, reconozco que al principio cuesta adaptarse a un editor como _vim_ donde nada está donde uno espera. Es más, no hay nada que esté donde uno espera. Para que te hagas una idea de cuán distinto es puedes mirar la imagen a continuación. Observa que interfaz tan minimalista.
 
 {% progressive_picture
   thumbnail: /assets/vim-intro-1.thumb.jpg
@@ -38,7 +38,7 @@ La pregunta que te puedes estar haciendo es ¿por qué usar _vim_ si voy a tener
 
 Si tras ver una pantalla completamente en negro sigues con ganas de darle un oportunidad, lo primero que deberías saber es que tiene una curva de aprendizaje de semanas (incluso meses) para empezar a tener cierta soltura en su manejo. Una vez haya pasado este tiempo y tras un uso regular encontrarás todo su potencial. Para que te hagas a una idea, comprobarás lo rápido que es tener todas las acciones posibles a un golpe de teclado (_keystroke_) o combinaciones de ellos.
 
-Otros de los beneficios de vim es que puedes usarlo en entornos en remoto a través de conexiones _SSH_ que no ofrecen una interfaz gráfica. Si por algún motivo la conexión fuese lenta, vim encadenaría las acciones tecleadas y las ejecutaría cuando pudiese en el mismo orden sin que se perdieran ¿No es genial esto? De hecho al funcionar sobre un terminal evita un consumo de recursos de sistema mayor, como lo haría cualquier otro editor en un entorno gráfico. Por supuesto, existen variantes de _vim_ que se pueden usar en un entorno gráfico, aunque entonces perdería la gracia.
+Otros de los beneficios de _vim_ es que puedes usarlo en entornos en remoto a través de conexiones _SSH_ que no ofrecen una interfaz gráfica. Si por algún motivo la conexión fuese lenta, _vim_ encadenaría las acciones tecleadas y las ejecutaría cuando pudiese en el mismo orden sin que se perdieran ¿No es genial esto? De hecho al funcionar sobre un terminal evita un consumo de recursos de sistema mayor, como lo haría cualquier otro editor en un entorno gráfico. Por supuesto, existen variantes de _vim_ que se pueden usar en un entorno gráfico, aunque entonces perdería la gracia.
 
 Si te asusta lo de no poder usar el ratón no debes preocuparte. _vim_ ofrece la posibilidad de habilitarlo añadiendo un parámetro en su configuración. Tras reiniciarlo podrás usar el ratón al igual que en cualquier entorno gráfico. Como comprobarás _vim_ es altamente configurable.
 
@@ -62,7 +62,7 @@ Otra característica muy interesante que permite _vim_ es poder dividir la venta
 
 Por otro lado también incorpora un explorador de carpetas. Algo rudimentario pero funcional al fin y al cabo. Aunque esta opción la acabarás sustituyendo por un plugin como [_NERDTree_][nerdtree]. Una solución mucho más completa que el navegador por defecto.
 
-Otra particularidad de vim es la amplia gama de _plugins_ y librerías adicionales que existen. La mayoría de estas son mantenidas por una comunidad muy activa, garantizando su usabilidad a largo plazo. Si quieres ver algunos ejemplos entra en [_vimawesome.com_][vimawesome].
+Otra particularidad de _vim_ es la amplia gama de _plugins_ y librerías adicionales que existen. La mayoría de estas son mantenidas por una comunidad muy activa, garantizando su usabilidad a largo plazo. Si quieres ver algunos ejemplos entra en [_vimawesome.com_][vimawesome].
 
 Como puedes ver, _vim_ es un editor que ofrece las mismas posibilidades sino más que otros. Su gran dificultad es su curva de aprendizaje pero si has llegado hasta aquí imagino que sigues teniendo cierto interés en aprender a manejarlo. Si es así entonces el siguiente paso es instalarlo y configurarlo.
 
@@ -86,7 +86,7 @@ Este comando abrirá el programa mostrando la siguiente pantalla.
   width: 1452
   alt: 'Pantalla de inicio de vim.' %}
 
-Como antes dije, el ratón no funciona aunque se puede activar. Además también habrás comprobado que no puedes escribir. Esto se debe a que vim por defecto arranca con el modo _normal_ activado. Más adelante veremos que es eso de los modos.
+Como antes dije, el ratón no funciona aunque se puede activar. Además también habrás comprobado que no puedes escribir. Esto se debe a que _vim_ por defecto arranca con el modo _normal_ activado. Más adelante veremos que es eso de los modos.
 
 Para poder escribir todo lo que tienes que hacer es pulsar la tecla <kbd>i</kbd>. A continuación puedes ver que el cursor ha cambiado y en la parte inferior de la pantalla pegado a la izquierda ha aparecido el texto {% ihighlight shell %}-- INSERT --{% endihighlight %}. Esto indica que ha cambiado de modo y ya puedes escribir como lo harías en un editor común.
 
@@ -111,7 +111,7 @@ Una forma de averiguar este nombre es tecleando {% ihighlight shell %}:version{%
 
 Para hallar el nombre del archivo de configuración debes buscar el texto _user vimrc file_. Lo más común es que el texto a la derecha de los dos puntos sea {% ihighlight shell %}$HOME/.vimrc{% endihighlight %}. Si no fuese así al menos ya sabrías cómo nombrar archivo de configuración. 
 
-Lo normal es que no exista este archivo así que tendrás que crearlo. Si queremos que todos los cambios sean permanentes en cualquier ruta donde se ejecute vim este archivo se deberá instalar donde apunte la variable de sistema {% ihighlight shell %}$HOME{% endihighlight %}. Un aspecto interesante sobre la configuración de vim es que estas propiedades pueden ser sobreescritas si en el directorio donde se ejecuta el programa existe otro {% ihighlight shell %}.vimrc{% endihighlight %}. Por lo tanto prevalecen los parámetros en este último archivo de configuración.
+Lo normal es que no exista este archivo así que tendrás que crearlo. Si queremos que todos los cambios sean permanentes en cualquier ruta donde se ejecute _vim_ este archivo se deberá instalar donde apunte la variable de sistema {% ihighlight shell %}$HOME{% endihighlight %}. Un aspecto interesante sobre la configuración de _vim_ es que estas propiedades pueden ser sobreescritas si en el directorio donde se ejecuta el programa existe otro {% ihighlight shell %}.vimrc{% endihighlight %}. Por lo tanto prevalecen los parámetros en este último archivo de configuración.
 
 Dicho esto, teclea desde _vim_ el siguiente comando.
 
@@ -139,7 +139,7 @@ Por último [aquí][full-vim-options] puedes ver la lista completa de opciones d
 Vim ofrece la posibilidad de trabajar con el texto de tres maneras diferentes: _normal_, _insert_ y _visual_.
 
 ### _normal_
-Este es el modo por defecto nada más abrir vim. Cómo podrás observar si lo tienes abierto no permite la edición del texto, al menos cómo lo harías en cualquier editor. Aunque no es cierto que no se pueda editar. Todos las acciones de edición son ejecutadas a través de un comando asociado a un botón del teclado. Por ejemplo, borrar un carácter se haría con la letra <kbd>x</kbd>.
+Este es el modo por defecto nada más abrir _vim_. Cómo podrás observar si lo tienes abierto no permite la edición del texto, al menos cómo lo harías en cualquier editor. Aunque no es cierto que no se pueda editar. Todos las acciones de edición son ejecutadas a través de un comando asociado a un botón del teclado. Por ejemplo, borrar un carácter se haría con la letra <kbd>x</kbd>.
 
 Muchas de estas acciones pueden ser usadas en combinación con comandos de movimiento y repetición. Un ejemplo sería al pulsar la tecla <kbd>3</kbd> le estaríamos indicando a _vim_ que ejecute la siguiente acción tres veces. Por lo tanto usado en combinación con <kbd>x</kbd> —<kbd>3</kbd><kbd>x</kbd>— se borrarán los tres siguientes caracteres hacia la derecha. 
 
@@ -232,13 +232,13 @@ Este modo permite seleccionar el texto mediante secciones rectangulares de texto
   alt: 'Selección en bloque.' %}
 
 ## Conclusión
-Hasta aquí la introducción a vim. Espero que el artículo te haya servido para hacerte una idea de las posibilidades que ofrece este editor. Personalmente hace años que lo utilizo y estoy encantado con su rendimiento. Además de no usar el ratón lo cual es muy _cool_. Como un hacker de película (que no falte el esnobismo).
+Hasta aquí la introducción a _vim_. Espero que el artículo te haya servido para hacerte una idea de las posibilidades que ofrece este editor. Personalmente hace años que lo utilizo y estoy encantado con su rendimiento. Además de no usar el ratón lo cual es muy _cool_. Como un hacker de película (que no falte el esnobismo).
 
 Bromas aparte, si que es cierto que una vez habituado, la ejecución de los comandos más comunes se realizan de forma casi automática y en lo que tardas en pulsar unas teclas.
 
 Para finalizar y como buen punto de partida te recomiendo que hagas el tutorial instalado conjuntamente con _vim_, _vimtutor_. Para saber más sobre éste tan solo debes teclear [{% ihighlight shell %}:help vimtutor{% endihighlight %}][vimtutor] desde _vim_. También puedes consultar toda la documentación oficial en el propio editor teclando {% ihighlight shell %}:help{% endihighlight %}. Aunque probablemente al principio te parezca más cómodo leer el mismo contenido en una [página web][vimdoc]. Otro recurso interesante es tener una chuleta al lado para poder consultar rápidamente que comando necesitas. Si buscas [_vim cheat sheet_ en google][vim-cheatsheet-google] encontrarás decenas de ellas.
 
-[_Vim Adventures_][vim-adventures] es otra opción interesate y divertida donde aprender vim jugando. Si prefieres algo más austero también puedes probar con otros tutoriales interactivos como [_openvim_][openvim] o [_vimgenius_][vimgenius].
+[_Vim Adventures_][vim-adventures] es otra opción interesate y divertida donde aprender _vim_ jugando. Si prefieres algo más austero también puedes probar con otros tutoriales interactivos como [_openvim_][openvim] o [_vimgenius_][vimgenius].
 
 ## Fuentes 
 * [vim.org](http://www.vim.org/)
