--- a/_posts/2017-11-03-vim-intro.md
+++ b/_posts/2017-11-03-vim-intro.md
@@ -27,7 +27,7 @@ Hay muchos editores de texto entre los que elegir. Muchos de ellos llevan mucho 
 
 A diferencia de la mayoría de editores está _vim_. Básicamente este programa funciona sobre una consola de comandos (no corre sobre un entorno gráfico). Todas sus acciones se basan en comandos de teclado (ausencia de ratón). Y sus diferentes modos de edición (_normal_, _input_, _visual_) que más adelante verás. Solo estas tres características pueden ahuyentar al profano.
 
-La pregunta que te puedes estar haciendo es ¿por qué usar _vim_ si voy a tener que aprender desde cero para manejarlo? Pues bien, reconozco que al principio cuesta adaptarse a un editor como _vim_ donde nada está donde uno espera. Es más, no hay nada que esté donde uno espera. Para que te hagas una idea de cuán distinto es puedes mirar la imagen a continuación. Observa que interfaz tan minimalista.
+La pregunta que te puedes estar haciendo es ¿por qué usar _vim_ si voy a tener que aprender desde cero para manejarlo? Pues bien, reconozco que al principio cuesta adaptarse a un editor como _vim_ donde nada está donde uno espera. Para que te hagas una idea de cuán distinto es, observa la imagen a continuación. Observa que interfaz tan minimalista.
 
 {% progressive_picture
   thumbnail: /assets/vim-intro-1.thumb.jpg
@@ -36,7 +36,7 @@ La pregunta que te puedes estar haciendo es ¿por qué usar _vim_ si voy a tener
   width: 1490
   alt: 'Interfaz de vim.' %}
 
-Si tras ver una pantalla completamente en negro sigues con ganas de darle un oportunidad, lo primero que deberías saber es que tiene una curva de aprendizaje de semanas (incluso meses) para empezar a tener cierta soltura en su manejo. Una vez haya pasado este tiempo y tras un uso regular encontrarás todo su potencial. Para que te hagas a una idea, comprobarás lo rápido que es tener todas las acciones posibles a un golpe de teclado (_keystroke_) o combinaciones de ellos.
+Si tras ver una pantalla completamente en negro sigues con ganas de darle una oportunidad, lo primero que deberías saber es que su curva de aprendizaje es de semanas, incluso meses. Una vez haya pasado este tiempo y tras un uso regular encontrarás todo su potencial. Por ejemplo, comprobarás lo rápido que es tener todas las acciones más comunes bajo los dedos o comandos más complejos mediante combinaciones de teclas.
 
 Otros de los beneficios de _vim_ es que puedes usarlo en entornos en remoto a través de conexiones _SSH_ que no ofrecen una interfaz gráfica. Si por algún motivo la conexión fuese lenta, _vim_ encadenaría las acciones tecleadas y las ejecutaría cuando pudiese en el mismo orden sin que se perdieran ¿No es genial esto? De hecho al funcionar sobre un terminal evita un consumo de recursos de sistema mayor, como lo haría cualquier otro editor en un entorno gráfico. Por supuesto, existen variantes de _vim_ que se pueden usar en un entorno gráfico, aunque entonces perdería la gracia.
 
