Refactor table styles

--- a/_posts/2017-11-03-vim-intro.md
+++ b/_posts/2017-11-03-vim-intro.md
@@ -147,7 +147,8 @@ Otro ejemplo combinatorio sería <kbd>3</kbd><kbd>d</kbd><kbd>l</kbd>. En este c
 
 Los comandos de movimiento originales son <kbd>h</kbd><kbd>j</kbd><kbd>k</kbd><kbd>l</kbd>. Esto es así debido a que el creador de [_vi_][vi] (_vim_ es una versión mejorada de _vi_ como especifican sus siglas, Vi IMproved) lo hizo con [terminal ADM-3A][hjkl] a mediados de los 70 y desde entonces se ha mantenido.
 Abajo puedes ver los diferentes movimientos.
-<table class="commands-table table-half">
+
+<table class="arrows-table table-half">
   <tbody>
     <tr>
       <td colspan="2">&#8593;k</td>
@@ -171,7 +172,13 @@ En definitiva debe quedarte claro que en este modo es donde pasarás la mayor pa
 ### _insert_
 Este es el modo de edición que la mayoría de editores ofrecen. Se accede desde el modo mediante alguno de los siguientes comandos.
 
-<table class="commands-table-description table-full">
+<table class="commands-table solid-table table-full">
+  <thead>
+    <tr>
+      <td><b>Acciones</b></td>
+      <td><b>Descripción</b></td>
+    </tr>
+  </thead>
 <tbody>
 <tr>
 <td><kbd>a</kbd></td>
