Edited old post

--- a/_posts/2018-01-26-vim-ctags.md
+++ b/_posts/2018-01-26-vim-ctags.md
@@ -179,7 +179,7 @@ Pero todavía no funciona bien con React. Así que en otra búsqueda di con otro
 
 No se descartan cambios en el futuro.
 
-Y esto es todo. A parte de estos consejos también recomiendo la lectura de el [capítulo 29][29] y [Tags and special searches][tags-special] del manual de vim para ampliar información al respecto.
+Y esto es todo. A parte de estos consejos también recomiendo la lectura del [capítulo 29][29] y [Tags and special searches][tags-special] del manual de vim para ampliar información al respecto.
 
 ## Fuentes
 * [vimdoc.sourceforge.net/htmldoc/usr_29.html](http://vimdoc.sourceforge.net/htmldoc/usr_29.html)
