--- a/_posts/2017-11-03-vim-intro.md
+++ b/_posts/2017-11-03-vim-intro.md
@@ -1,9 +1,10 @@
 ---
 title: "vim: introducción"
 date: 2017-11-03 00:30:00 +0100
-categories: [artículos, vim, tutorial]
+category: tutorial
 excerpt: Breve tutorial sobre el manejo de vim y sus diferentes modos de edición.
 permalink: /articulos/vim-intro
+tags: [vim]
 ---
 {% progressive_picture
   src: https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Vimlogo.svg/1022px-Vimlogo.svg.png
