WIP: already completed

--- a/_posts/2017-11-03-vim-intro.md
+++ b/_posts/2017-11-03-vim-intro.md
@@ -3,8 +3,8 @@ title: "vim: introducción"
 date: 2017-11-03 00:30:00 +0100
 excerpt: Breve tutorial sobre el manejo de vim y sus diferentes modos de edición.
 permalink: /articulos/vim-intro
-category: IT
-tags: [vim, tutorial]
+category: it
+tags: [vim, intro, modos-vim, tutorial]
 ---
 {% progressive_picture
   src: https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Vimlogo.svg/1022px-Vimlogo.svg.png
